# segpq

./: CMakeLists.txt  README.md  build.sh  check.sh  decode.sh  faiss.cpp  pgm_build.cpp  pgm_decode.cpp  rsd_huffman.cpp  z.sh  zh.sh  zh_build.sh  zh_decode.sh  zh_sd.sh
compressor/: .gitignore  CMakeLists.txt  build.sh  check.sh  compress.sh  decode.sh  pgm_build.cpp  pgm_decode.cpp  pgm_query.cpp  pgm_residual_compressor.cpp  query.sh  test.cpp
compressor/include/: hash_table.hpp  huffman_encode.hpp  optPFD_encode.hpp  perf_event.hpp  pgm_index.hpp  pgm_index_build.hpp  pgm_index_decode.hpp  pgm_index_enumerate.hpp  pgm_index_query.hpp  pgm_index_residual_compressor.hpp  piecewise_linear_model.hpp  sp_tree.hpp  tools.hpp
compressor/include/backup-codes (abandoned)/: pgm_index_variants.hpp  piecewise_linear_model.hpp  residual.hpp  residual_sdsl.hpp  rsd_huffman.cpp  test.cpp
include/: huffman_encode.hpp  pgm_index.hpp  pgm_index_build.hpp  pgm_index_decode.hpp  piecewise_linear_model.hpp  tools.hpp
include/backup-codes (abandoned)/: pgm_build.cpp  pgm_index.hpp  pgm_index_build.hpp  residual_sdsl_simd.hpp  sd_test.cpp
